Updated: downloading the Metar, and showing the Raw Metars

--- a/app/src/main/res/layout/fragment_airports.xml
+++ b/app/src/main/res/layout/fragment_airports.xml
@@ -1,16 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!-- <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="airportMetarViewModel"
+            type="be.equality.metar.ui.MetarViewModel" />
+    </data>-->
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
+        <!--  <ProgressBar
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"></ProgressBar>
+              app:mutableVisibility="@{airportMetarViewModel.getLoadingVisibility()}" />-->
+
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview"
@@ -34,4 +45,4 @@
         android:layout_marginTop="10dp"
         />
 
-</android.support.constraint.ConstraintLayout>
+</android.support.constraint.ConstraintLayout><!--</layout> -->
