--- a/app/src/main/res/layout/fragment_raw.xml
+++ b/app/src/main/res/layout/fragment_raw.xml
@@ -1,26 +1,14 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
->
+    tools:context=".fragments.RawFragment">
 
-
-    <ImageView
-        android:contentDescription="What does a METAR look like"
-        android:id="@+id/imageview_fragmentraw_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:src="@mipmap/metardescription" />
-
+    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/rawmetar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/imageview_fragmentraw_description"
-        android:layout_marginTop="23dp"
-        android:ems="10"
-        android:text="@string/rewmetar" />
-</RelativeLayout>
+        android:text="@string/hello_blank_fragment" />
 
+</FrameLayout>
